2016-01-04  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade mingw32-libunistring package to 0.9.6.

	* contrib/mingw32-libunistring.xml: Updated for libunistring version 0.9.6.
	* contrib/issue.log: Updated accordingly.

2016-01-03  Erwin Waterlander  <waterlan@xs4all.nl>

	New package mingw32-ncurses 6.0.

	* contrib/mingw32-ncurses.xml: New for ncurses version 6.0.
	* mingw32/mingw32-package-list.xml: Added mingw32-ncurses.
	* mingw32/issue.log: Updated accordingly.
	* contrib/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2015-12-22  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 7.3.2.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 7.3.2.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 7.3.2.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2015-09-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade binutils package to version 2.25.1 (correction)

	* mingw32/mingw32-binutils.xml (binutils) <bin>: Correct archive
	compression type; was recorded as .lzma; should be .xz
	* common/issue.log mingw32/issue.log: Update accordingly.

2015-09-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade binutils package to version 2.25.1

	* mingw32/mingw32-binutils.xml: Add new release specifications.
	(binutils) <doc>: Component package marked obsolete; NOT upgraded.
	* common/issue.log mingw32/issue.log: Update accordingly.

2015-09-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade pexports package to version 0.47

	* mingw32/mingw32-pexports.xml: Add new release specifications.
	* common/issue.log mingw32/issue.log: Update accordingly.

2015-09-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug [#2216]: error in gettext-0.18.3.2 packaging.

	* mingw32-gettext.xml (all package components): Add new release