@@ -23,6 +23,6 @@
 # MinGW Project, accept liability for any damages, however caused,
 # arising from the use of this software.
 #
-  75fc52dde8d408d798c0be51070d5d02f4c63085 2016010300 package-list.xml
+  c6a9068e183254c0b930ac6e1a70fd81743dc212 2016010701 package-list.xml
 #
 # $RCSfile$: end of file
