@@ -56,13 +56,6 @@
   <package-list catalogue="mingw32-xz" />
   <package-list catalogue="mingw32-zlib" />
 
-  <!-- "real" packages ~~ user contributed -->
-  <package-list catalogue="mingw32-libunistring" />
-  <package-list catalogue="mingw32-ncurses" />
-  <package-list catalogue="mingw32-pdcurses" />
-  <package-list catalogue="mingw32-tcltk" />
-  <package-list catalogue="mingw32-xerces-c" />
-
   <!-- "virtual" packages -->
   <package-list catalogue="mingw32-base" />
   <package-list catalogue="mingw32-autotools" />
